Bug 314760 - Keyboard input doesn't work after assigning window shortcut
Summary: Keyboard input doesn't work after assigning window shortcut
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 4.10.1
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/108...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 14:30 UTC by Christoph Lange
Modified: 2013-02-12 21:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Lange 2013-02-09 14:30:00 UTC
This is possibly a kwin bug instead of an Okular bug, but so far I have only seen it happen with Okular, not with other applications.

Reproducible: Always

Steps to Reproduce:
1. Run Okular using kwin as a window manager
2. Assign a window shortcut to the Okular window (Alt+F3 → more actions → window shortcut)
3. Try some keyboard input action in the Okular window, e.g. hit Space
Actual Results:  
The Okular window does not accept any keyboard input.

Expected Results:  
normal keyboard input should be possible

Workaround: switch to a different window, then switch back to the Okular window.
Comment 1 Albert Astals Cid 2013-02-09 17:29:10 UTC
Martin, any idea why this might happen?
Comment 2 Martin Flöser 2013-02-09 18:29:37 UTC
@Christoph:
* which KWin version?
* which window decoration?
Comment 3 Christoph Lange 2013-02-09 18:38:50 UTC
Oops, sorry for not reporting these:
(In reply to comment #2)
> @Christoph:
> * which KWin version?
4.10.0
> * which window decoration?
Oxygen (with a customized configuration, which I can send you if needed).
Comment 4 Martin Flöser 2013-02-09 18:45:48 UTC
> > * which window decoration?
> 
> Oxygen (with a customized configuration, which I can send you if needed).
no need, just tell me your configured border size.
Comment 5 Christoph Lange 2013-02-09 19:16:42 UTC
(In reply to comment #4)
> no need, just tell me your configured border size.
It's as easy as that? OK, my border size (according to Decoration Options → General → Border Size) is Tiny.
Comment 6 Martin Flöser 2013-02-09 21:52:41 UTC
> It's as easy as that? OK, my border size (according to Decoration Options →
> General → Border Size) is Tiny.
Please try changing to Normal and try whether this fixes the issue.
Comment 7 Christoph Lange 2013-02-10 00:42:57 UTC
(In reply to comment #6)
> > It's as easy as that? OK, my border size (according to Decoration Options →
> > General → Border Size) is Tiny.
> Please try changing to Normal and try whether this fixes the issue.
I did so, but it didn't fix the issue. Note that I did not log out, but within my running KDE session I ran kwin --replace, and tried assigning a window shortcut to a new Okular window opened after that.
Comment 8 Martin Flöser 2013-02-10 07:09:43 UTC
that means my guess was wrong -> adding kwin to cc
Comment 9 Thomas Lübking 2013-02-10 09:03:27 UTC
Happens with more (every?) window(s).
They loose input focus (on the Qt layer, no idea about X11 atm) after you entered the shorttcut (before pressing ok) and don't gain it pack.
Comment 10 Thomas Lübking 2013-02-12 21:30:17 UTC
Git commit e71774897d092327b6d860353658fdaca79f7d0f by Thomas Lübking.
Committed on 10/02/2013 at 12:53.
Pushed by luebking into branch 'master'.

restore inputfocus after assigning window shortcut
FIXED-IN: 4.10.1
REVIEW: 108887

M  +2    -0    kwin/useractions.cpp

http://commits.kde.org/kde-workspace/e71774897d092327b6d860353658fdaca79f7d0f
Comment 11 Thomas Lübking 2013-02-12 21:39:52 UTC
Git commit 3a52c68713591ce9aadc12853836216f79e90e43 by Thomas Lübking.
Committed on 10/02/2013 at 12:53.
Pushed by luebking into branch 'KDE/4.10'.

restore inputfocus after assigning window shortcut
FIXED-IN: 4.10.1
REVIEW: 108887
(cherry picked from commit e71774897d092327b6d860353658fdaca79f7d0f)

M  +2    -0    kwin/useractions.cpp

http://commits.kde.org/kde-workspace/3a52c68713591ce9aadc12853836216f79e90e43