restore inputfocus after assigning window shortcut

BUG: 314760
FIXED-IN: 4.10.1
REVIEW: 108887